# digikala-sdk

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/: CHANGELOG.md  ERROR_HANDLING.md  QUICK_START.md  README.md  SDK_Documentation.md  brands.md  products.md  sellers.md
examples/: basic_usage.py  brand_example.py  error_handling.py  error_handling_example.py
internal/: IMPLEMENTATION_SUMMARY.md  REFACTORING_SUMMARY.md
src/: __init__.py  client.py  config.py  exceptions.py  implementations.py  protocols.py
src/models/: __init__.py  brand_models.py  common_models.py  product_models.py  search_models.py  seller_models.py
src/services/: __init__.py  base.py  brands.py  fresh_products.py  products.py  sellers.py
tests/: __init__.py  conftest.py  test_brands.py  test_client.py  test_error_handling.py  test_implementations.py  test_inactive_product.py  test_products.py  test_security_fixes.py  test_sellers.py  test_validation.py
